--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,11 @@ body {
   margin-bottom: 10px;
 }
 
-.contactInfo-container{
-    width: 100%;
-    overflow-x: hidden;
-    word-wrap: break-word;
-    padding: 2px;
+.contactInfo-container {
+  width: 100%;
+  overflow-x: hidden;
+  word-wrap: break-word;
+  padding: 2px;
 }
 
 .contactInfo ul {
@@ -106,12 +106,12 @@ body {
   cursor: pointer;
 }
 
-.contactInfo ul li:last-child{
+.contactInfo ul li:last-child {
   margin-bottom: 0;
 }
 
-.contactInfo ul .contact-list{
-    display: flex;
+.contactInfo ul .contact-list {
+  display: flex;
 }
 
 .contactInfo ul li .icon {
@@ -127,8 +127,8 @@ body {
   font-size: 18px;
 }
 
-.contactInfo ul li .text.wrap{
-    flex-direction: column;
+.contactInfo ul li .text.wrap {
+  flex-direction: column;
 }
 
 .contactInfo ul li span,
@@ -137,8 +137,8 @@ body {
   font-weight: 300;
 }
 
-.contactInfo ul li .text.email{
-    word-break: break-all;
+.contactInfo ul li .text.email {
+  word-break: break-all;
 }
 
 .contactInfo ul li span a {
@@ -152,51 +152,47 @@ body {
   text-decoration-color: #03a9f4;
 }
 
-.contactInfo.education li{
-    margin-bottom: 15px;
+.contactInfo.education li {
+  margin-bottom: 15px;
 }
 
-.contactInfo.education li:last-child{
+.contactInfo.education li:last-child {
   margin-bottom: 0;
 }
 
-.contactInfo.education h5{
-    color: #03a9f4;
-    font-weight: 500;
+.contactInfo.education h5 {
+  color: #03a9f4;
+  font-weight: 500;
 }
 
-.contactInfo.education h4:nth-child(2){
-    color: #fff;
-    font-weight: 500;
+.contactInfo.education h4:nth-child(2) {
+  color: #fff;
+  font-weight: 500;
 }
 
-.contactInfo.education h4{
-    color: #fff;
-    font-weight: 300;
+.contactInfo.education h4 {
+  color: #fff;
+  font-weight: 300;
 }
 
-.contactInfo.language .percent{
-    position: relative;
-    width: 100%;
-    height: 8px;
-    background: #081921;
-    display: block;
-    border-radius: 3px;
-    margin-top: 5px;
+.contactInfo.language .percent {
+  position: relative;
+  width: 100%;
+  height: 8px;
+  background: #081921;
+  display: block;
+  border-radius: 3px;
+  margin-top: 5px;
 }
 
-.contactInfo.language .percent div{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background: #03a9f4;
-    border-radius: 3px;
+.contactInfo.language .percent div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+  border-radius: 3px;
 }
-
-
-
-
 
 /* container right side */
 .container .right_side {
@@ -205,96 +201,136 @@ body {
   padding: 40px;
 }
 
-.about{
-    margin-bottom: 30px;
+.about {
+  margin-bottom: 30px;
 }
 
-.about:last-child{
-    margin-bottom: 0;
+.about:last-child {
+  margin-bottom: 0;
 }
 
-.title2{
-    color: #003147;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
+.title2 {
+  color: #003147;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
 }
 
-p{
-    color: #333;
+p {
+  color: #333;
 }
 
-.about .box{
-    display: flex;
-    flex-direction: row;
-    margin: 20px 0;
+.about .box {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
 }
 
-.about .box .year_company{
-    min-width: 150px;
+.about .box .year_company {
+  min-width: 150px;
 }
 
-.about .box .year_company h5{
-    text-transform: uppercase;
-    color: #848c90;
-    font-weight: 600;
+.about .box .year_company h5 {
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 600;
 }
 
-.about .box .text h4{
-    text-transform: uppercase;
-    color: #2a7da2;
-    font-size: 16px;
+.about .box .text h4 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
 }
 
-.skills .box{
-    position: relative;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 150px 1fr;
-    justify-content: center;
-    align-items: center;
+.skills .box {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  justify-content: center;
+  align-items: center;
 }
 
-.skills .box h4{
-    text-transform: uppercase;
-    color: #848c90;
-    font-weight: 500;
+.skills .box h4 {
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 500;
 }
 
-.skills .box .percent{
-    position: relative;
-    width: 100%;
-    height: 10px;
-    background: #f0f0f0;
-    border-radius: 3px;
+.skills .box .percent {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  background: #f0f0f0;
+  border-radius: 3px;
 }
 
-.skills .box .percent div{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background: #03a9f4;
-    border-radius: 3px;
+.skills .box .percent div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+  border-radius: 3px;
 }
 
 .projects ul,
-.contributions ul{
- list-style-type: none;
+.contributions ul {
+  list-style-type: none;
 }
 
-.projects .project-content{
+.projects .project-content {
   display: flex;
 }
 
-.projects .box.project{
+.projects .box.project {
   margin: 10px 0;
 }
 
-.projects .link{
+.projects .link {
   margin-left: 5px;
 }
 
-.projects .link i{
-  color: #0645AD;
+.projects .link i {
+  color: #0645ad;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    margin: 10px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .container .right_side{
+    padding: 20px;
+  }
+
+  .about .box {
+    flex-direction: column;
+  }
+
+  .about .box .year_company {
+    margin-bottom: 5px;
+  }
+
+  .skills .box {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .projects .project-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .projects .ifen {
+    display: none;
+  }
+}
+
+@media (max-width: 410px){
+  .profileText h2{
+    font-size: 1.1em;
+  }
 }
